--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/iconmoon.css" rel="stylesheet">
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   	<!--[if lt IE 9]>
@@ -134,7 +135,7 @@
             </div>
             <div class="col-md-6 column">
                 <a class="btn btn-default btn-lg cooperazione" href="./pace_disarmo_cooperazione.html">
-                <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-pagelines fa-stack-1x fa-inverse"></i></span>Cooperazione, pace, disarmo</a>
+                <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="icon-noun_122924_cc fa-stack-1x fa-inverse"></i></span>Cooperazione, pace, disarmo</a>
             </div>
             <div class="col-md-6 column">
                 <a class="btn btn-default btn-lg cultura" href="./cultura_conoscenza.html">
