--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-home fa-stack-1x fa-inverse"></i></span>Welfare e diritti</a>
             </div>
             <div class="col-md-6 column">
-                <a class="btn btn-default btn-lg lavoro" href="./lavoro.html">
+                <a class="btn btn-default btn-lg lavoro" href="./lavoro_reddito.html">
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-wrench fa-stack-1x fa-inverse"></i></span>Lavoro e reddito</a>
             </div>
             <div class="col-md-6 column">
