aggiunti i link alla pagina tutte le proposte

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-leaf fa-stack-1x fa-inverse"></i></span>Ambiente e sviluppo sostenibile</a>
             </div>
             <div class="col-md-6 column">
-                <a class="btn btn-default btn-lg tutto">
+                <a class="btn btn-default btn-lg tutto" href="./tutte.html">
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span>Tutte le proposte</a>
             </div>
     </div>
