--- a/lavoro_reddito.html
+++ b/lavoro_reddito.html
@@ -95,6 +95,7 @@
                                 <li><a href="./welfare.html">Welfare e diritti</a></li>
                                 <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
                                 <li><a href="./altra_economia.html">Altraeconomia</a></li> 
+                                <li><a href="./tutte.html">Tutte le proposte</a></li> 
                             </ul>
                     <li>
                         <a href="./infografiche.html">Infografiche</a>
