--- a/altra_economia.html
+++ b/altra_economia.html
@@ -94,7 +94,8 @@
                                 <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
                                 <li><a href="./welfare.html">Welfare e diritti</a></li>
                                 <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
-                                <li class="active"><a href="./altra_economia.html">Altraeconomia</a></li> 
+                                <li class="active"><a href="./altra_economia.html">Altraeconomia</a></li>
+								<li><a href="./tutte.html">Tutte le proposte</a></li> 								
                             </ul>
                     <li>
                         <a href="./infografiche.html">Infografiche</a>
