--- a/tutte.html
+++ b/tutte.html
@@ -3,7 +3,7 @@
 <html lang="it">
 <head>
 	<meta charset="utf-8">
-	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente > Welfare e diritti</title>
+	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente > Tutte le proposte</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
   <meta name="author" content="Ondata">
@@ -107,9 +107,10 @@
                   <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
                   <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
                   <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
-                  <li class="active"><a href="./welfare.html">Welfare e diritti</a></li>
+                  <li><a href="./welfare.html">Welfare e diritti</a></li>
                   <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
                   <li><a href="./altra_economia.html">Altraeconomia</a></li> 
+				  <li class="active"><a href="./tutte.html">Tutte le proposte</a></li> 
                 </ul>
                 <li>
                   <a href="./infografiche.html">Infografiche</a>
