definito schema dati

--- a/tutte.html
+++ b/tutte.html
@@ -54,6 +54,7 @@
   type="application/jsonp"
   href="https://spreadsheets.google.com/feeds/cells/18R5dMkVBRzjVj1m_OkdGzaHwKJt7mzvT53PoqwrYiB4/ose35q8/public/basic?alt=json-in-script"
   ex:converter="googleSpreadsheets" />
+  <link href="schema.js" type="application/json" rel="exhibit/data" />
   <script src="./js/dist/exhibit-api.js?locale=it"></script>
   <script type="text/javascript">
   var tableStyler = function(table, database) {
