--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
         <div class="row clearfix">
             <div class="navbar-header">
             <a class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> 
-            <!--
-            <a class="navbar-brand logo" href="./index.html">
-            <img style="max-width:100px; margin-top: 7px;"  src="./img/pitrusino.png">
-            </a>
-            -->
+
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -104,6 +100,7 @@
             <h3>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</h3>
             </div>
             <div class="slogan col-md-6 column">
+                <img src="./img/sbila_noscritta_home.png" class="img-responsive">
             </div>
     </div>
     <div id="main" class="container">
@@ -114,8 +111,8 @@
                 <!-- <span class="fa-stack">
                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                 <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1> -->
-                <a href="#"><img src="./images/sbilanciamoci_home.png"></a>
-                <a href="#"><h2 style="color:black;">Scarica il rapporto 2016</h2></a>
+                <!-- <a href="#"><img src="./img/scarica_sbilanciamoci.png"></a> -->
+                <a href="#" style="text-decoration: none" class="scarica">Scarica il rapporto 2016</a>
             </div>
         </div>
     </div>
