--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
   </head>
 
   <body>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4eda567433e0df40" async="async"></script>
     
      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="row clearfix">
@@ -188,5 +190,7 @@
 </footer>
 
 </div>
+
+
 </body>
 </html>
