--- a/altra_economia.html
+++ b/altra_economia.html
@@ -65,6 +65,9 @@
 </head>
 
 <body>
+      <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4eda567433e0df40" async="async"></script>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
   <script type="text/javascript" src="./js/zorn/wz_tooltip.js"></script>
   <div class="row clearfix">
    <div class="container">
