migliorato responsiveness nei due blocchi in home

--- a/index.html
+++ b/index.html
@@ -98,12 +98,14 @@
 
     <div id="intro" class="container">
             <br><br>
-            <div class="slogan col-md-6 column">
+            <div class="slogan col-md-6 column centro-verticale">
+			<div class="contenitore">
             <h1>Rapporto 2016</h1>
             <h3>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</h3>
+			</div>
             </div>
-            <div class="slogan col-md-6 column">
-                <img src="./img/sbila_noscritta_home.png" class="img-responsive">
+            <div class="slogan col-md-6 column" >
+                <img src="./img/sbila_noscritta_home.png" class="img-responsive center-block">
             </div>
     </div>
     <div id="main" class="container">
